<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment" 
        android:icon="@drawable/ic_home" 
        android:title="@string/bottom_nav_home" />

    <item
        android:id="@+id/reportsFragment" 
        android:icon="@drawable/ic_reports" 
        android:title="@string/bottom_nav_reports" />

    <item
        android:id="@+id/rewardsFragment"
        android:icon="@drawable/ic_rewards"
        android:title="@string/bottom_nav_rewards" />

    <item
        android:id="@+id/profileFragment" 
        android:icon="@drawable/ic_profile" 
        android:title="@string/bottom_nav_profile" />

    <!-- Add other items like 'Rewards' if they are top-level destinations -->

</menu> 